# evil-twitter

./: .dockerignore  .gitignore  Architecture.md  DEPLOY.md  PLAN.md  README.md  WEAPONS_API_READY.md  WEAPONS_READY.md  package-lock.json
ai-remix-service/: README.md  ai_processor.py  main.py  minimal-example.py  models_config.py  requirements.txt
backend/: .env  Cargo.toml  README.md
backend/src/: db.rs  main.rs
evil-twitter-backend/: .dockerignore  .env.example  ARCHITECTURE.md  Cargo.toml  Dockerfile  FAKE_DATA_GENERATION.md  KILL.md  MIGRATE_BLING.md  MIGRATE_SMACKS.md  README.md  SERVICES_USAGE.md  USER_OBJECTID_MIGRATION.md  create_fake_tweets.rs  create_fake_users.rs  generate_fake_data.sh  graphQL.md  migrate_bling.rs  migrate_health.rs  migrate_smacks.rs  migrate_user_objectids.rs  transactions.md
evil-twitter-backend/src/: app_state.rs  lib.rs  main.rs
evil-twitter-expo/: AUTH_FIXES.md  App.tsx  README.md  STYLING.md  STYLING_MIGRATION.md  colours.json  package-lock.json  package.json  tree.md  tsconfig.json  vercel.json
evil-twitter-expo/app/: _layout.tsx  index.tsx  modal.tsx
evil-twitter-frontend/: README.md  package-lock.json  package.json
frontend-app/: .gitignore  package-lock.json  package.json
image-remix-backend/: .env  Cargo.toml  README.md
image-remix-frontend/: .env  API_SETUP.md  app.config.ts  app.json  package-lock.json  package.json
image-remix-nextjs/: README.md  package.json
opinions-market/: .gitignore  Anchor.toml  Cargo.toml  kill.md  separation.md
opinions-market-engine/: .gitignore  Anchor.toml  Cargo.toml  architecture.md
opinions-market/common/: Cargo.toml
opinions-market/common/src/: lib.rs  pda_seeds.rs
opinions-market/common/src/states/: mod.rs  user.rs
opinions-market/deploy/: config.rs
opinions-market/programs/fed/: Cargo.toml
opinions-market/programs/fed/src/: calculators.rs  instructions.rs  lib.rs  pda_seeds.rs
opinions-market/programs/fed/src/math/: mod.rs  token_conversion.rs
opinions-market/programs/fed/src/modifiers/: mod.rs  resolve.rs
opinions-market/programs/fed/src/states/: mod.rs  tools.rs  user.rs
opinions-market/programs/freeport/: Cargo.toml
opinions-market/programs/freeport/src/: instructions.rs  lib.rs  pda_seeds.rs
opinions-market/programs/freeport/src/states/: config.rs  mod.rs
opinions-market/programs/industrial-complex/: Cargo.toml
opinions-market/programs/industrial-complex/src/: instructions.rs  lib.rs  pda_seeds.rs
opinions-market/programs/industrial-complex/src/states/: config.rs  item.rs  mod.rs
opinions-market/programs/nft-bank/: Cargo.toml
opinions-market/programs/nft-bank/src/: lib.rs  pda_seeds.rs
opinions-market/programs/nft-freeport/: Cargo.toml
opinions-market/programs/nft-freeport/src/: instructions.rs  lib.rs  pda_seeds.rs
opinions-market/programs/opinions-market/: Cargo.toml
opinions-market/programs/opinions-market old/: Cargo.toml
opinions-market/programs/opinions-market old/src/: constants.rs  instructions.rs  lib.rs
opinions-market/programs/opinions-market old/src/math/: token_conversion.rs  vote_cost.rs
opinions-market/programs/opinions-market old/src/states/: post.rs  state.rs
opinions-market/programs/opinions-market/src/: calculators.rs  constants.rs  instructions.rs  lib.rs  pda_seeds.rs  state.rs
opinions-market/programs/opinions-market/src/math/: mod.rs  token_conversion.rs  vote_cost.rs
opinions-market/programs/opinions-market/src/middleware/: session.rs
opinions-market/programs/opinions-market/src/modifiers/: effect.rs  mod.rs
opinions-market/programs/opinions-market/src/states/: bounty.rs  config.rs  mod.rs  post.rs  state.rs  tools.rs  user.rs  voter.rs
opinions-market/programs/persona/: Cargo.toml
opinions-market/programs/persona/src/: calculators.rs  constants.rs  instructions.rs  lib.rs  pda_seeds.rs
opinions-market/programs/persona/src/states/: mod.rs  user.rs
opinions-market/programs/referrals/: Cargo.toml
opinions-market/programs/referrals/src/: lib.rs
opinions-market/scripts/: Cargo.toml  migrate_idl.sh
opinions-market/scripts/src/: main.rs
opinions-market/tests/: Cargo.toml
opinions-market/tests/src/: config.rs  lib.rs  test_clock.rs  test_initialize.rs
opinions-market/tests/src/clock_utils/: mod.rs
opinions-market/tests/src/utils/: mod.rs  phenomena.rs  rates.rs  utils.rs
opinions-market/token-keys/: bling-mint.json  stablecoin-mint.json  usdc-mint.json
privy-frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
privy-next-farcaster/: pnpm-lock.yaml
privy-playground/: package-lock.json  package.json
privy-template/: package-lock.json  package.json  pnpm-lock.yaml
stablecoin/: AGENTS.md  Anchor.toml  Cargo.toml
stablecoin-x/: architecture.md
stablecoin-x/programs/stablecoin/: Cargo.toml
stablecoin-x/programs/stablecoin/src/: instructions.rs
stablecoin/programs/klend-tester/: Cargo.toml
stablecoin/programs/klend-tester/src/: lib.rs
stablecoin/programs/klend-tester/tests/: klend_init.rs
stablecoin/programs/stablecoin/src/: lib.rs
stablecoin/programs/stablecoin/src/math/: curve.rs
stablecoin/tests/: Cargo.toml  klend-tester.ts
stablecoin/tests/src/: test_initialize.rs
stablecoin/tests/src/utils/: utils.rs
(+501 files in other folders)
