[workspace]
members = ["programs/*", "tests", "scripts"]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[workspace.dependencies]
opinions_market = { path = "programs/opinions_market" }
referrals = { path = "programs/referrals" }
persona = { path = "programs/persona" }

anchor-lang = "0.31.1"
anchor-client = "0.31.1"
anchor-spl = "0.31.1"

solana-sdk = "2.2.1"
solana-client = "2.2.1"
solana-program-test = "2.2.1"
spl-tlv-account-resolution = "0.10.0"
spl-transfer-hook-interface = "0.10.0"
spl-type-length-value = "0.8.0"
spl-pod = "0.5.0"
bytemuck = "1.22.0"
hex = "0.4"
