[workspace]
members = [
    "programs/*"
, "tests"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[workspace.dependencies]
stablecoin  = { path = "programs/stablecoin" }

anchor-lang = "0.31.1"
anchor-client = "0.31.1"
anchor-spl = "0.31.1"

solana-sdk = "2.2.1"
solana-client = "2.2.1"
solana-program-test = "2.2.1"
