[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
name = "tests"
path = "src/lib.rs"

[dependencies]

opinions-market = { version = "0.1.0", path = "../programs/opinions-market" }
persona = { version = "0.1.0", path = "../programs/persona" }
fed = { version = "0.1.0", path = "../programs/fed" }
referrals = { version = "0.1.0", path = "../programs/referrals" }
industrial-complex = { version = "0.1.0", path = "../programs/industrial-complex" }
nft-bank = { version = "0.1.0", path = "../programs/nft-bank" }

rand = "0.8"
tokio = { version = "1", features = ["macros"] }


anchor-client = { workspace = true, features = ["async"] }
anchor-spl = { workspace = true }


solana-sdk = { workspace = true }
solana-client = { workspace = true }


anyhow = "1.0.99"


hex = "0.4"

solana-transaction-status-client-types = "2.3.13"
