[package]
name = "stablecoin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stablecoin"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]



[dependencies]
anchor-lang = { workspace = true, features=["init-if-needed"] }
anchor-spl = { workspace = true, features=["token_2022_extensions"] }
spl-tlv-account-resolution = "0.10.0"
spl-transfer-hook-interface = "0.10.0"
spl-type-length-value = "0.8.0"
spl-pod = "0.5.0"
bytemuck = "1.22.0"
hex="0.4"

