[package]
name = "klend-tester"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "klend_tester"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
anchor-client = "0.31.1"
anyhow = "1.0"
sha2 = "0.10"
shellexpand = "3.1"
borsh = "0.10"
